# auth_service

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
auth_service/: .gitignore
auth_service/auth_service/: settings.py  urls.py
auth_service/users/: admin.py  models.py  permissions.py  serializers.py  views.py
auth_service/users/migrations/: 0001_initial.py  0002_permission_permission_code.py  0003_alter_user_email.py  0004_alter_user_phone_number.py
